--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,6 @@ on:
     tags:
       - 'v*'
 
-# 添加权限配置
 permissions:
   contents: write
   discussions: write
@@ -15,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -32,13 +33,19 @@ jobs:
       - name: Build
         run: pnpm build
         
+      - name: Create dist archive
+        run: |
+          cd dist
+          zip -r ../cover-craft.zip .
+          cd ..
+        
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: |
-            dist/**
+          files: cover-craft.zip
           draft: false
           prerelease: false
           generate_release_notes: true
+          body_path: CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
