--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,13 +44,13 @@ jobs:
       - name: Create dist archive
         run: |
           cd dist
-          zip -r ../cover-craft.zip .
+          zip -r ../cova.zip .
           cd ..
         
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: cover-craft.zip
+          files: cova.zip
           draft: false
           prerelease: false
           body: ${{ env.CHANGELOG }}
