--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cover-craft",
+  "name": "cova",
   "private": true,
   "version": "0.0.19",
   "type": "module",
@@ -25,9 +25,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/guizimo/cover-craft.git"
+    "url": "https://github.com/guizimo/cova.git"
   },
-  "homepage": "github.com/guizimo/cover-craft#readme",
+  "homepage": "github.com/guizimo/cova#readme",
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
