--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
