--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.0.0",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.4.1",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0",
