--- a/package.json
+++ b/package.json
@@ -81,7 +81,13 @@
     "vite": "^6.3.5"
   },
   "lint-staged": {
-    "src/*.{js,ts,tsx,json}": "prettier --write ."
+    "src/**/*.{js,ts,tsx,jsx,json}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   },
   "packageManager": "pnpm@9.15.0+sha1.8bfdb6d72b4d5fdf87d21d27f2bfbe2b21dd2629"
 }
