--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "i18next": "^25.2.1",
     "lucide-react": "^0.511.0",
@@ -46,6 +46,7 @@
     "react-i18next": "^15.5.2",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.3",
